# msx-2p-hbf1xv

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  hbf1xv-config.xml  sony_msx_hbf1xv.xml
tests/: CLAUDE.md  CMakeLists.txt
tests/integration/devices/: cpu_bus_contract_integration_test.cpp
tests/integration/frontend/: config_runtime_wiring_integration_test.cpp  disk_replace_flush_semantics_integration_test.cpp  disk_writable_toggle_flush_integration_test.cpp  master_volume_audio_identity_integration_test.cpp  sdl3_app_bios_folder_integration_test.cpp  sdl3_app_cartridge_insert_integration_test.cpp  sdl3_app_debug_session_integration_test.cpp  sdl3_app_eject_integration_test.cpp  sdl3_app_fmpac_autoload_integration_test.cpp  sdl3_app_fmpac_sram_integration_test.cpp  sdl3_app_headless_integration_test.cpp  sdl3_app_hidden_window_gate_integration_test.cpp  sdl3_app_input_script_integration_test.cpp  sdl3_app_multi_disk_integration_test.cpp  sdl3_app_open_disks_integration_test.cpp  sdl3_app_power_cycle_integration_test.cpp  sdl3_app_record_input_integration_test.cpp  sdl3_app_reset_determinism_integration_test.cpp  sdl3_app_scaling_integration_test.cpp  sdl3_app_snapshot_integration_test.cpp  sdl3_audio_emission_integration_test.cpp  sdl3_audio_presenter_integration_test.cpp  sdl3_cli_session_integration_test.cpp  sdl3_input_mapper_integration_test.cpp  sdl3_input_mapper_key_names_consistency_integration_test.cpp  sdl3_menu_gate_integration_test.cpp  sdl3_video_presenter_pixel_integration_test.cpp
tests/integration/machine/: hbf1xv_bios_boot_integration_test.cpp  hbf1xv_bios_filename_config_integration_test.cpp  hbf1xv_bl_latch_integration_test.cpp  hbf1xv_boot_checkpoint_devices_integration_test.cpp  hbf1xv_boot_checkpoint_fdc_integration_test.cpp  hbf1xv_boot_logo_integration_test.cpp  hbf1xv_cartridge_identification_integration_test.cpp  hbf1xv_cartridge_integration_test.cpp  hbf1xv_cartridge_smoke_integration_test.cpp  hbf1xv_cb_program_integration_test.cpp  hbf1xv_command_beam_clamp_integration_test.cpp  hbf1xv_command_engine_integration_test.cpp  hbf1xv_command_render_sync_integration_test.cpp  hbf1xv_command_sprite_pacing_integration_test.cpp  hbf1xv_cpm_run_integration_test.cpp  hbf1xv_cpu_parity_integration_test.cpp  hbf1xv_cpu_step_integration_test.cpp  hbf1xv_cpu_vram_steal_invariance_integration_test.cpp  hbf1xv_debug_event_log_integration_test.cpp  hbf1xv_debug_session_integration_test.cpp  hbf1xv_devices_integration_test.cpp  hbf1xv_disk_save_persist_integration_test.cpp  hbf1xv_fdc_integration_test.cpp  hbf1xv_fm_activity_probe_integration_test.cpp  hbf1xv_fmpac_cartridge_integration_test.cpp  hbf1xv_halnote_integration_test.cpp  hbf1xv_halt_r_integration_test.cpp  hbf1xv_indexed_program_integration_test.cpp  hbf1xv_input_script_integration_test.cpp  hbf1xv_interrupt_ack_integration_test.cpp  hbf1xv_io_parity_checkpoint_integration_test.cpp  hbf1xv_konami_scc_integration_test.cpp  hbf1xv_ldir_program_integration_test.cpp  hbf1xv_line_interrupt_integration_test.cpp  hbf1xv_m11_parity_checkpoint_integration_test.cpp  hbf1xv_m13_mem_parity_checkpoint_integration_test.cpp  hbf1xv_m15_boot_checkpoint_integration_test.cpp  hbf1xv_m15_devices_integration_test.cpp  hbf1xv_m16_boot_checkpoint_integration_test.cpp  hbf1xv_m16_fdc_integration_test.cpp  (+59 more)
tests/integration/peripherals/: rensha_turbo_integration_test.cpp
tests/parity/: halnote.rom  m16_boot.dsk  m17_ym2413_probe_regs.txt  m19_cartridge.rom  m29_scc.rom  z80_parity_checkpoint.md
tests/system/: boot_system_test.cpp  cpu_bootstrap_im1_system_test.cpp  debug_tooling_system_test.cpp  disk_boot_investigation_system_test.cpp  fm_synth_system_test.cpp  hbf1xv_m21_vdp_render_system_test.cpp  hbf1xv_m22_sprites_command_engine_system_test.cpp  hbf1xv_m24_zexall_system_test.cpp  hbf1xv_m25_speed_pause_rensha_system_test.cpp  hbf1xv_m26_sdl3_system_test.cpp  hbf1xv_m27_debug_tooling_system_test.cpp  hbf1xv_m27_replay_determinism_system_test.cpp  hbf1xv_m28_c5_disk_boot_investigation_system_test.cpp  hbf1xv_m29_scc_system_test.cpp  hbf1xv_m31_fm_synth_system_test.cpp  hbf1xv_m32_split_screen_system_test.cpp  hbf1xv_m34_aleste_ultrasonic_regression_system_test.cpp  hbf1xv_m34_ultrasonic_regression_system_test.cpp  hbf1xv_m36_snapshot_determinism_system_test.cpp  hbf1xv_m36_stream_capture_system_test.cpp  hbf1xv_m49_sprite_split_coincidence_system_test.cpp  hbf1xv_m58_strategy_map_oracle_system_test.cpp  hbf1xv_m62_racing_stability_system_test.cpp  racing_stability_system_test.cpp  replay_determinism_system_test.cpp  scc_system_test.cpp  sdl3_system_test.cpp  snapshot_determinism_system_test.cpp  speed_pause_rensha_system_test.cpp  split_screen_system_test.cpp  sprite_split_coincidence_system_test.cpp  sprites_command_engine_system_test.cpp  strategy_map_oracle_system_test.cpp  stream_capture_system_test.cpp  ultrasonic_regression_system_test.cpp  vdp_render_system_test.cpp  zexall_system_test.cpp
tests/unit/core/: bus_contract_unit_test.cpp  scheduler_unit_test.cpp
tests/unit/devices/: audio_click_dac_unit_test.cpp  audio_dwell_rounding_unit_test.cpp  audio_psg_sync_before_change_unit_test.cpp  audio_psg_ym2149_unit_test.cpp  audio_scc_wavetable_unit_test.cpp  audio_ym2413_opll_unit_test.cpp  audio_ym2413_synth_envelope_unit_test.cpp  audio_ym2413_synth_operator_unit_test.cpp  audio_ym2413_synth_rhythm_lfo_unit_test.cpp  audio_ym2413_synth_tables_unit_test.cpp  audio_ym2413_write_timing_unit_test.cpp  chipset_backup_ram_sram_unit_test.cpp  chipset_backup_ram_unit_test.cpp  chipset_io_bus_unit_test.cpp  chipset_m1_wait_unit_test.cpp  chipset_mapper_io_unit_test.cpp  chipset_ppi_8255_unit_test.cpp  chipset_ppi_slot_select_unit_test.cpp  chipset_reset_status_register_unit_test.cpp  chipset_slot_bus_unit_test.cpp  cpu_bus_client_unit_test.cpp  cpu_io_seam_unit_test.cpp  memory_battery_backed_sram_unit_test.cpp  memory_mapper_ram_unit_test.cpp  memory_rom_device_unit_test.cpp  rtc_rp5c01_unit_test.cpp  video_sprite_engine_check_until_equivalence_unit_test.cpp  video_sprite_engine_mode1_unit_test.cpp  (+55 more)
(+664 files in other folders)
